--- a/PrivateWorkSite/MainPage.html
+++ b/PrivateWorkSite/MainPage.html
@@ -18,29 +18,49 @@
         <header class="title">
             <h1>VittKills</h1>
         </header>
-        <nav id="g_navi">
+    </div>
+    <div class="g_navi">
+        <nav>
             <ul>
-                <il><a href="genre1">ジャンル1</a></il>
-                <il><a href="genre2">ジャンル2</a></il>
-                <il><a href="genre3">ジャンル3</a></il>
+                <il><a href="" class="btn btn-flat"><span>FIXIE</span></a></il>
+                <il><a href="" class="btn btn-flat"><span>MTB</span></a></il>
+                <il><a href="" class="btn btn-flat"><span>BMX</span></a></il>
             </ul>
         </nav>
-        <!----- ヘッダー END ----->
-
-        <!----- メインコンテンツ ----->
-        <article>
-            <h1>タイトル</h1>
-            <section>
-                <h2>タイトル</h2>
-                <p>コンテンツの内容</p>
-            </section>
-        </article>
-        <!----- メインコンテンツ END ----->
-
-        <!----- フッター ----->
-        <footer>フッター</footer>
-        <!----- フッター END ----->
     </div>
+    <!----- ヘッダー END ----->
+
+    <!----- メインコンテンツ ----->
+
+    <div class="news">
+        <h1>NEWS</h1>
+    </div>
+    <article>
+        <div class="news_column">
+            <figure class="image"> <a href="news1.html"><img src="img/BackLOOK.jpg" alt="news1img"></a></figure>
+            <div class="colum_Contents">
+                <a href="nesw1.html">
+                    <p class="colum_title">LIKU'S LOOK AL464P</p>
+                </a>
+                <p class="colum_text">いろいろいろいろ</p>
+            </div>
+    </article>
+    <article>
+        <div class="news_column">
+            <figure class="image"> <a href="news2.html"><img src="img/BackLOOK.jpg" alt="news1img"></a></figure>
+            <div class="colum_Contents">
+                <a href="nesw2.html">
+                    <p class="colum_title">LIKU'S LOOK AL464P</p>
+                </a>
+                <p class="colum_text">いろいろいろいろ</p>
+            </div>
+    </article>
+    <!----- メインコンテンツ END ----->
+
+    <!----- フッター ----->
+    <footer>フッター</footer>
+    <!----- フッター END ----->
+
 </body>
 
 </html>
