--- a/PrivateWorkSite/MainPage.html
+++ b/PrivateWorkSite/MainPage.html
@@ -22,9 +22,9 @@
     <div class="g_navi">
         <nav>
             <ul>
-                <il><a href="" class="btn btn-flat"><span>FIXIE</span></a></il>
-                <il><a href="" class="btn btn-flat"><span>MTB</span></a></il>
-                <il><a href="" class="btn btn-flat"><span>BMX</span></a></il>
+                <il><a href="FixieTag.html" class="btn btn-flat"><span>FIXIE</span></a></il>
+                <il><a href="MTBTag.html" class="btn btn-flat"><span>MTB</span></a></il>
+                <il><a href="BMXTag.html" class="btn btn-flat"><span>BMX</span></a></il>
             </ul>
         </nav>
     </div>
@@ -39,26 +39,27 @@
         <div class="news_column">
             <figure class="image"> <a href="news1.html"><img src="img/BackLOOK.jpg" alt="news1img"></a></figure>
             <div class="colum_Contents">
-                <a href="nesw1.html">
+                <a href="news1.html">
                     <p class="colum_title">LIKU'S LOOK AL464P</p>
                 </a>
-                <p class="colum_text">いろいろいろいろ</p>
+                <p class="colum_text">今回はサイト管理者のBikeをCheckする</p>
             </div>
     </article>
     <article>
         <div class="news_column">
-            <figure class="image"> <a href="news2.html"><img src="img/BackLOOK.jpg" alt="news1img"></a></figure>
+            <figure class="image"> <a href="news2.html"><img src="img/page2.JPG" alt="news1img"></a></figure>
             <div class="colum_Contents">
-                <a href="nesw2.html">
-                    <p class="colum_title">LIKU'S LOOK AL464P</p>
+                <a href="news2.html">
+                    <p class="colum_title">LIKU'S NSbikes Capital</p>
                 </a>
-                <p class="colum_text">いろいろいろいろ</p>
+                <p class="colum_text">以前乗っていたフリースタイルなBikeをCheck</p>
             </div>
     </article>
     <!----- メインコンテンツ END ----->
 
     <!----- フッター ----->
-    <footer>フッター</footer>
+    <footer>
+    </footer>
     <!----- フッター END ----->
 
 </body>
