--- a/PrivateWorkSite/FixieTag.html
+++ b/PrivateWorkSite/FixieTag.html
@@ -44,6 +44,16 @@
                     <p class="colum_text">今回はサイト管理者のBikeをCheckする</p>
                 </div>
         </article>
+        <article>
+            <div class="news_column">
+                <figure class="image"> <a href="news2.html"><img src="img/noimage.jpg" alt="news1img"></a></figure>
+                <div class="colum_Contents">
+                    <a href="news2.html">
+                        <p class="colum_title">Sion's NJS EIMEI</p>
+                    </a>
+                    <p class="colum_text">チームメンバーSionの駆るEimeiをCheckしていく</p>
+                </div>
+        </article>
     </div>
     <!----- メインコンテンツ END ----->
 
