--- a/PrivateWorkSite/MainPage.html
+++ b/PrivateWorkSite/MainPage.html
@@ -47,12 +47,32 @@
     </article>
     <article>
         <div class="news_column">
-            <figure class="image"> <a href="news2.html"><img src="img/page2.JPG" alt="news1img"></a></figure>
+            <figure class="image"> <a href="news3.html"><img src="img/page2.JPG" alt="news1img"></a></figure>
             <div class="colum_Contents">
                 <a href="news2.html">
                     <p class="colum_title">LIKU'S NSbikes Capital</p>
                 </a>
                 <p class="colum_text">以前乗っていたフリースタイルなBikeをCheck</p>
+            </div>
+    </article>
+    <article>
+        <div class="news_column">
+            <figure class="image"> <a href="news2.html"><img src="img/noimage.jpg" alt="news1img"></a></figure>
+            <div class="colum_Contents">
+                <a href="news2.html">
+                    <p class="colum_title">Sion's NJS EIMEI</p>
+                </a>
+                <p class="colum_text">チームメンバーSionの駆るEimeiをCheckしていく</p>
+            </div>
+    </article>
+    <article>
+        <div class="news_column">
+            <figure class="image"> <a href="news4.html"><img src="img/ffk.png" alt="news1img"></a></figure>
+            <div class="colum_Contents">
+                <a href="news4.html">
+                    <p class="colum_title">Notice</p>
+                </a>
+                <p class="colum_text">ちょっとした告知があります！</p>
             </div>
     </article>
     <!----- メインコンテンツ END ----->
