--- a/PrivateWorkSite/BMXTag.html
+++ b/PrivateWorkSite/BMXTag.html
@@ -16,7 +16,7 @@
 
         <!----- ヘッダー ----->
         <header class="title">
-            <h1>BMX's</h1>
+            <h1>VittKills</h1>
         </header>
     </div>
     <div class="g_navi">
